--- a/src/components/App/index.css
+++ b/src/components/App/index.css
@@ -11,3 +11,11 @@
     display: flex;
     flex-wrap: wrap;
 }
+
+.reset-btn button {
+    padding: 20px 40px;
+    margin: 0 0 0 20px;
+    background: lightgreen;
+    font-size: 1.2em;
+    cursor: pointer;
+}
